--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -16,15 +16,15 @@ a, a:hover, a:focus, button:hover, button:focus{
 }
 
 body {
-    background: #f8f8f8;
-    color: #000000;
-    font-size: 18px;
+    background: #ffffff;
+    color: #7F7F7F;
+    font-size: 16px;
     line-height: 24px;
-     font-family: 'Candara';
+    font-family: 'Chivo', sans-serif;
 }
 p{
-	line-height: 1.2;
-	margin-bottom: 15px;
+	line-height: 1.6;
+	margin-bottom: 20px;
 }
 ::selection {
   color: #fff;
@@ -96,7 +96,7 @@ Containers
 
 }
 .container{
-	max-width: 1200px;
+	max-width: 1170px;
 	width: 100%;
 }
 .container-md{
