--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -14,17 +14,27 @@ a, a:hover, a:focus, button:hover, button:focus{
 	text-decoration: none;
 	outline: 0;
 }
+a{
+	color: #E26C60;
+}
+a:hover{
+	color: #F2101C;
+}
 
 body {
     background: #ffffff;
     color: #7F7F7F;
     font-size: 16px;
+    font-weight: 400;
     line-height: 24px;
     font-family: 'Chivo', sans-serif;
 }
 p{
 	line-height: 1.6;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
+}
+strong{
+	font-weight: 700;
 }
 ::selection {
   color: #fff;
