--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -28,6 +28,7 @@ body {
     font-weight: 400;
     line-height: 24px;
     font-family: 'Chivo', sans-serif;
+    /*font-family: 'Hind', sans-serif;*/
 }
 p{
 	line-height: 1.6;
