--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -1,3 +1,62 @@
+.header-wrap{
+
+}
+.top-bar{
+	background: #d61324;
+	padding: 13px 0;
+}
+.top-bar-cntlr{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+.top-bar-left{
+
+}
+.top-bar-left p{
+	margin-bottom: 0;
+	line-height: 1;
+	font-size: 18px;
+	color: #fff;
+}
+.top-bar-rt{
+	margin-left: auto;
+	padding-left: 15px;
+}
+.top-bar-rt ul{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+.top-bar-rt ul li{
+	padding-left: 9px;
+	padding-right: 9px;
+}
+.top-bar-rt ul li:first-child{
+	padding-left: 0;
+}
+.top-bar-rt ul li:last-child{
+	padding-right: 0;
+}
+.top-bar-rt ul li a{
+	padding-left: 26px;
+	display: inline-block;
+	position: relative;
+	color: #fff;
+	font-size: 14px;
+	line-height: 1;
+	margin-bottom: 0;
+}
+.top-bar-rt ul li.hdr-tel a{
+	padding-left: 24px;
+}
+.top-bar-rt ul li a i{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+
 nav.main-nav ul{
 
 }
