--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -4,7 +4,7 @@
 .top-bar{
 	background: #d61324;
 	padding: 13px 0;
-	border-bottom: 1px dotted #fff;
+	border-bottom: 2px dashed #fff;
 }
 .top-bar-cntlr{
 	display: flex;
@@ -224,6 +224,10 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 	align-items: center;
 	justify-content: center;
 	padding: 0 9px;
+	cursor: pointer;
+}
+.hdr-order-icon a{
+	display: flex;
 }
 .hdr-order-icon span{
 	display: inline-block;
