--- a/themes/mypiggyback/assets/css/_home.css
+++ b/themes/mypiggyback/assets/css/_home.css
@@ -38,11 +38,6 @@
 	border-right: 1px dashed #5b5b5b;
 	border-top: 1px dashed #5b5b5b;
 }
-/*.piggyback-slide-item .piggyback-active-item{
-	border-left-color: 1px dashed #d61324;
-	border-right-color: 1px dashed #d61324;
-	border-top-color: 1px dashed #d61324;
-}*/
 .piggyback-active-item.piggyback-item{
 	border-color: #d61324;
 }
@@ -114,4 +109,137 @@
 }
 .piggyback-active-item .piggyback-item-hding:after{
 	border-top: 20px solid #d61324;
+}
+
+
+/*Vehicle-sec-wrap*/
+.Vehicle-sec-wrap{
+	position: relative;
+}
+.Vehicle-left-bg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 62.5%;
+	z-index: 1;
+}
+.Vehicle-left-bg:after{
+	position: absolute;
+	content: "";
+	top: 35px;
+	right: 0;
+	border-right: 28px solid #fff;
+	border-top: 28px solid transparent;
+	border-bottom: 28px solid transparent;
+}
+.Vehicle-sec{
+	position: relative;
+	z-index: 3;
+}
+.Vehicle-cntlr{
+	display: flex;
+	flex-wrap: wrap;
+}
+.Vehicle-desc-cntlr{
+	width: 64.78%;
+	padding: 140px 25px 100px 25px;
+}
+.Vehicle-desc{
+	max-width: 590px;
+	width: 100%;
+	color: #fff;
+}
+.Vehicle-desc-title{
+	color: #fff;
+	margin-bottom: 45px;
+}
+.Vehicle-desc > p{
+	font-size: 18px;
+}
+.Vehicle-desc > p:last-of-type{
+	margin-bottom: 60px;
+}
+.vcl-btn-cntlr{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	margin: 0 -9px;
+}
+.vcl-btn{
+	padding: 0 9px;
+	margin-bottom: 20px;
+}
+.vcl-fst-btn .fl-red-btn{
+	color: #fff;
+	border-color: #fff;
+}
+.vcl-scnd-btn .fl-trnsprnt-btn{
+	background: #fff;
+
+}
+.vcl-scnd-btn .fl-trnsprnt-btn:hover{
+	background: transparent;
+	color: #fff;
+	border-color: #fff;
+}
+.vcl-right-wrap{
+	width: 35.22%;
+	padding-left: 42px;
+	padding-top: 45px;
+}
+.Vehicle-title{
+	margin-bottom: 50px;
+}
+.vcl-tabs{
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 0 -9px;
+}
+.vcl-tab-link{
+	padding: 0 9px;
+	width: 50%;
+	margin-bottom: 18px;
+	position: relative;
+	height: 160px;
+}
+.vcl-tab-link button{
+	background: transparent;
+	border: 2px dashed #5a5a5a;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 2;
+	cursor: pointer;
+}
+.current .tab-link{
+	border-color: #d4141f;
+}
+.current .tab-link i svg{
+	fill: #d4141f;
+}
+.vcl-tab-link span{
+	position: absolute;
+	width: 26px;
+	height: 26px;
+	background: #5b5b5b;
+	top: 0;
+	right: 9px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	z-index: 5;
+}
+.vcl-tab-link.current span{
+	background: #d4141f;
+}
+.fl-tab-content{
+	display: none;
+}
+.fl-tab-content.current{
+	display: block;
 }
