--- a/themes/mypiggyback/assets/css/_page.css
+++ b/themes/mypiggyback/assets/css/_page.css
@@ -1,20 +1,22 @@
 .slick-slider ul.slick-dots{
 	position: static;
-	height: 16px;
+	height: 20px;
 	line-height: 0;
 	padding: 0 20px!important;
 }
 .slick-slider .slick-dots li{
-	width: 16px!important;
-	height: 16px!important;
+	width: 20px!important;
+	height: 20px!important;
 	position: static;
-	background: #E1E1E1!important;
+	background: transparent!important;
 	border-radius: 100% 100%!important;
-	margin: 0 8px;
+	border: 2px solid #141414!important;
+	margin: 0 5px;
 	padding: 0!important;
 }
 .slick-slider .slick-dots li.slick-active{
-	background: #F3BA4B!important;
+	background: #D61225!important;
+	border-color: #D61225!important;
 }
 .slick-slider .slick-dots li:before,
 .slick-slider .slick-dots li button:before{
@@ -22,8 +24,8 @@
 }
 .slick-slider .slick-dots li button{
 	padding: 0;
-	width: 16px;
-	height: 16px;
+	width: 20px;
+	height: 20px;
 }
 
 
