--- a/themes/mypiggyback/assets/css/_services2.css
+++ b/themes/mypiggyback/assets/css/_services2.css
@@ -4,7 +4,7 @@
 }
 .service-items-cntrl{
 	position: relative;
-	height: 603px;
+	min-height: 603px;
 	margin-top: 65px;
 	display: flex;
 }
@@ -21,6 +21,7 @@
 	display: flex;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 .sicc {
 	padding-left: 33px;
@@ -32,24 +33,16 @@
 	margin-bottom: 40px;
 	color: #F2101C;	
 }
-.service-items-cntrl:nth-child(2n+2) .srv-fea-img {
+.service-items-cntrl{
+	display: flex;
+	align-items: center;
+}
+.services-page .service-items-cntrl:nth-child(2n+2) .srv-fea-img {
+	right: 0;
+}
+.services-page .service-items-cntrl:nth-child(2n+2) .siccc-cntrl .container .row > div:nth-child(1){
 	order: 2;
 }
-.services-page:nth-child(2n+2) .service-items-cntrl:nth-child(2){
-	order: 1;
-}
-/* .services-page:nth-child(2n+2) .service-items-cntrl:nth-child(2) .siccc-cntrl:nth-child(1){
-	order: 2;
-}
-.services-page:nth-child(2n+2) .service-items-cntrl:nth-child(2) .siccc-cntrl:nth-child(2){
-	order: 1;
-} */
-
-/*  */
-.siccc-cntrl:nth-child(2) {
-    width: 100%;
-    order: 2;
-}
-.siccc-cntrl:nth-child(3){
+.services-page .service-items-cntrl:nth-child(2n+2) .siccc-cntrl .container .row > div:nth-child(2){
 	order: 1;
 }
