--- a/themes/mypiggyback/assets/css/_services2.css
+++ b/themes/mypiggyback/assets/css/_services2.css
@@ -33,6 +33,10 @@
 	margin-bottom: 40px;
 	color: #F2101C;	
 }
+.sicc p{
+	line-height: 2.1;
+	margin-bottom: 35px;
+}
 .service-items-cntrl{
 	display: flex;
 	align-items: center;
@@ -40,9 +44,16 @@
 .services-page .service-items-cntrl:nth-child(2n+2) .srv-fea-img {
 	right: 0;
 }
+.services-page .service-items-cntrl:nth-child(2n+2) .srv-fea-img .emrs{
+	left: 0;
+}
 .services-page .service-items-cntrl:nth-child(2n+2) .siccc-cntrl .container .row > div:nth-child(1){
 	order: 2;
 }
 .services-page .service-items-cntrl:nth-child(2n+2) .siccc-cntrl .container .row > div:nth-child(2){
 	order: 1;
+	padding-right: 33px;
+}
+.services-page .service-items-cntrl:nth-child(2n+2) .siccc-cntrl .container .row > div:nth-child(2) .sicc{
+	padding-left: 0;
 }
