--- a/themes/mypiggyback/assets/css/main.css
+++ b/themes/mypiggyback/assets/css/main.css
@@ -17,7 +17,7 @@
 
 
 /*Start of Noyon*/
-/*@import url('_css-name');*/
+@import url('_vehicle-recovery.css');
 
 
 
@@ -30,7 +30,6 @@
 
 
 /*Start of Shariful*/
-/*@import url('_css-name');*/
 @import url('_home2.css');
 @import url('_about.css');
 
