--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -230,6 +230,10 @@
     font-family: 'GoboldExtra2';
     padding-top: 2px;
     cursor: pointer;
+/*    border: 2px solid #F2101C;*/
+}
+.vehicle-form input[type="submit"]:hover{
+	background: #c10913;
 }
 .input-field-row-submit{
 	margin-bottom: 0;
