--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -196,6 +196,9 @@
 	background: #f9f9f9;
 	width: 100%;
 }
+.vehicle-form input[type="text"]:focus{
+	border-color: #585757;
+}
 .vehicle-form .input-field-row{
 	padding-bottom: 17px;
 }
