--- a/themes/mypiggyback/assets/css/_footer.css
+++ b/themes/mypiggyback/assets/css/_footer.css
@@ -49,6 +49,7 @@
 .ftr-logo a{
 	display: inline-block;
 	vertical-align: baseline;
+	margin-left: -25px;
 }
 .ftr-logo span{
 	display: inline-block;
