--- a/themes/mypiggyback/assets/css/_page.css
+++ b/themes/mypiggyback/assets/css/_page.css
@@ -59,7 +59,7 @@
 .page-banner-dsc{
 	float: left;
 }
-.bnr-breadcum {
+.breadcumbs {
     float: right;
     padding-top: 12px;
 }
@@ -68,14 +68,14 @@
 	margin-bottom: 0;
 }
 
-.bnr-breadcum ul li{
+.breadcumbs ul li{
 	float: left;
 	font-size: 16px;
 	line-height: 1;
 	padding: 0 6px;
 	position: relative;
 }
-.bnr-breadcum ul li:after{
+.breadcumbs ul li:after{
     content: ">";
     position: absolute;
     right: -3px;
@@ -84,13 +84,17 @@
     font-size: 10px;
     line-height: 1;
 }
-.bnr-breadcum ul li:last-child{
+.breadcumbs ul li:last-child{
 	padding-right: 0;
 }
-.bnr-breadcum ul li:last-child:after{
+.breadcumbs ul li:last-child:after{
 	content: none;
 }
-.bnr-breadcum ul li a{
+.breadcumbs ul li a{
 	color: #fff;
 	font-family: 'GoboldRegular';
+	text-transform: uppercase;
+}
+.breadcumbs ul li a:hover{
+	color: #141414;
 }
