--- a/themes/mypiggyback/assets/css/responsive.css
+++ b/themes/mypiggyback/assets/css/responsive.css
@@ -3,11 +3,31 @@
 }
 
 @media(max-width: 1399px){
-
+	
 }
 
 @media(max-width: 1299px){
-
+	.container { 
+		max-width: 1100px; 
+	}
+	h1,.fl-h1{
+		font-size: 38px;
+	}
+	h2,.fl-h2{
+		font-size: 42px;
+	}
+	h3,.fl-h3{
+		font-size: 27px;
+	}
+	h4,.fl-h4{
+		font-size: 24px;
+	}
+	h5,.fl-h5{
+		font-size: 20px;
+	}
+	h6,.fl-h6{
+		font-size: 18px;
+	}
 }
 
 @media(max-width: 1199px){
@@ -16,6 +36,24 @@
 	}
 	.show-lg{
 		display: block!important;
+	}
+	h1,.fl-h1{
+		font-size: 35px;
+	}
+	h2,.fl-h2{
+		font-size: 40px;
+	}
+	h3,.fl-h3{
+		font-size: 27px;
+	}
+	h4,.fl-h4{
+		font-size: 24px;
+	}
+	h5,.fl-h5{
+		font-size: 20px;
+	}
+	h6,.fl-h6{
+		font-size: 18px;
 	}
 
 }
@@ -27,7 +65,24 @@
 	.show-md{
 		display: block!important;
 	}
-	
+	h1,.fl-h1{
+		font-size: 32px;
+	}
+	h2,.fl-h2{
+		font-size: 38px;
+	}
+	h3,.fl-h3{
+		font-size: 27px;
+	}
+	h4,.fl-h4{
+		font-size: 24px;
+	}
+	h5,.fl-h5{
+		font-size: 20px;
+	}
+	h6,.fl-h6{
+		font-size: 18px;
+	}
 }
 
 @media(max-width: 767px){
@@ -54,6 +109,24 @@
 		padding-right: 20px;
 		padding-left: 20px;
 	}
+	h1,.fl-h1{
+		font-size: 30px;
+	}
+	h2,.fl-h2{
+		font-size: 35px;
+	}
+	h3,.fl-h3{
+		font-size: 27px;
+	}
+	h4,.fl-h4{
+		font-size: 24px;
+	}
+	h5,.fl-h5{
+		font-size: 20px;
+	}
+	h6,.fl-h6{
+		font-size: 18px;
+	}
 }
 
 @media(max-width: 575px){
@@ -62,6 +135,24 @@
 	}
 	.show-xs{
 		display: block!important;
+	}
+	h1,.fl-h1{
+		font-size: 27px;
+	}
+	h2,.fl-h2{
+		font-size: 30px;
+	}
+	h3,.fl-h3{
+		font-size: 26px;
+	}
+	h4,.fl-h4{
+		font-size: 24px;
+	}
+	h5,.fl-h5{
+		font-size: 20px;
+	}
+	h6,.fl-h6{
+		font-size: 18px;
 	}
 
 }
